删除确认订单--加粗效果。支付订单修改文字

--- a/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
+++ b/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
@@ -56,8 +56,8 @@
 				<div class="address_message">
 					<input class="receiverId" type="hidden" />
 					<div class="address_message_top">
-						<div class="addressee"><strong>收件人：<span class="consignee"></span></span></strong></div>
-						<div class="cell-phone"><strong><span class="phone"></span></strong></div>
+						<div class="addressee">收件人：<span class="consignee"></span></span></div>
+						<div class="cell-phone"><span class="phone"></span></div>
 					</div>
 					<div class="detailed_address"><span class="areaName"></span><span class="address"></span></div>
 				</div>
@@ -222,7 +222,7 @@
 				<div class="coupon_lists">
 					<div class="coupon_money">
 						<div class="aui_circle"></div>
-						<div class="figure"><span class="symbol"><strong>￥</strong></span><span class="yuan"><strong>5</strong></span></div>
+						<div class="figure"><span class="symbol">￥</span><span class="yuan">5</span></div>
 						<div class="impletion">满120元可用</div>
 					</div>
 					<div class="his_general">
@@ -233,7 +233,7 @@
 				<div class="coupon_lists">
 					<div class="coupon_money">
 						<div class="aui_circle"></div>
-						<div class="figure"><span class="symbol"><strong>￥</strong></span><span class="yuan"><strong>5</strong></span></div>
+						<div class="figure"><span class="symbol">￥</span><span class="yuan">5</span></div>
 						<div class="impletion">满120元可用</div>
 					</div>
 					<div class="his_general">
@@ -244,7 +244,7 @@
 				<div class="coupon_lists">
 					<div class="coupon_money">
 						<div class="aui_circle"></div>
-						<div class="figure"><span class="symbol"><strong>￥</strong></span><span class="yuan"><strong>5</strong></span></div>
+						<div class="figure"><span class="symbol">￥</span><span class="yuan">5</span></div>
 						<div class="impletion">满120元可用</div>
 					</div>
 					<div class="his_general">
