--- a/wechat/src/main/webapp/xcview/html/shop/payment_success.html
+++ b/wechat/src/main/webapp/xcview/html/shop/payment_success.html
@@ -58,7 +58,7 @@
 			<div class="actual_payment finished">实付款<span class="amount"></span></div>
 			<div class="button">
 				<div class="index" onclick="location.href ='/xcview/html/shop/shop.html'">商城首页</div>
-				<div class="details" onclick="location.href ='/xcview/html/shop/order_center.html'">订单列表</div>
+				<div class="details" onclick="location.href ='/xcview/html/shop/order_center.html'">订单详情</div>
 			</div>
 		</div>
 
