--- a/wechat/src/main/webapp/xcview/html/shop/order_center.html
+++ b/wechat/src/main/webapp/xcview/html/shop/order_center.html
@@ -228,8 +228,11 @@
 					{{else if item.status == 'COMPLETED' || item.status == 'RECEIVED'}}
 					<div class="win_check_logistics" onclick='getTransitSteps("{{item.sn}}")'>查看物流</div>
 					<div class="win_shipped_cancel_order" onclick='againBuy("{{item.sn}}")'>再次购买</div>
-					<div class="win_evaluate" >评价</div>   <!-- 交易成功后评价后-评价按钮隐藏 -->
-					
+
+					  {{if !item.isReviewed}}	
+						<div class="win_evaluate" onclick='review("{{item.sn}}")'>评价</div>   <!-- 交易成功后评价后-评价按钮隐藏 -->
+					  {{/if}}	
+
 					<!-- 交易关闭 -->
 					{{else if item.status == 'CANCELED' || item.status == 'FAILED' || item.status == 'DENIED'}}
 					<div class="delete_order" data-id="{{item.id}}">删除订单</div>
