--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -402,7 +402,6 @@
 	.opens{
 		font-size: 0.28rem;
 	}
-
 	.swiper-pagination-bullet{
 		border: none !important;
 	    width: 0.22rem !important;
@@ -447,6 +446,17 @@
 	    width: 100%;
 	    color: #999;
 	    display: none;
+	}
+	.nature_made{
+		font-size: .24rem;
+	    color: #999999;
+	    margin-left: .26rem;
+	    margin-bottom: .2rem;
+	}
+	.nature_made img{
+		width: 1.62rem;
+    	height: .24rem;
+    	vertical-align:middle;
 	}
 </style>
 
@@ -675,6 +685,20 @@
 				{{else if item.type == 6}}
 				<!-- 商品-->
 				<div class="article_hide" data-id="{{item.productId}}" data-status="{{item.articleStatus}}"  style="margin-top: 0;">
+					<div class="nature_made">
+						医师推荐
+						{{if item.level == 1}}
+						<img src="/xcview/images/xing1_0.png" alt="" class="xingxing" />
+						{{else if item.level == 2}}
+						<img src="/xcview/images/xing2.png" alt="" class="xingxing" />
+						{{else if item.level == 3}}
+						<img src="/xcview/images/xing3.png" alt="" class="xingxing" />
+						{{else if item.level == 4}}
+						<img src="/xcview/images/xing4_0.png" alt="" class="xingxing" />
+						{{else if item.level == 5}}
+						<img src="/xcview/images/xing5.png" alt="" class="xingxing" />
+						{{/if}}
+					</div>
 					<div class="article_nav_span comment_hide " style="overflow: hidden; ">{{if item.stick}}<span class="stick_img_stick"><img src="/xcview/images/stick.png" alt="" />置顶</span>{{/if}}<span class="title show-text">{{item.content}}</span><div class="both"></div>
 					</div>
 
