中医师详情--添加商品金额-购买跳转。修改好货首页-默认推荐医师头像

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -458,6 +458,20 @@
     	height: .24rem;
     	vertical-align:middle;
 	}
+	.buy_goods{
+		font-size: .24rem;
+	    color: #F97215;
+	    /* width: 1rem; */
+	    border: 1px solid #f97215;
+	    width: 1rem;
+	    float: right;
+	    text-align: center;
+	    height: .5rem;
+	    line-height: .5rem;
+	    border-radius: 100px;
+	    margin-right: .2rem;
+	    margin-top: -.28rem;
+	}
 </style>
 
 </head>
@@ -705,7 +719,9 @@
 					{{if item.productIsMarketable}}
 					<div class="article_nav_cen comment_hide">
 						<img src="{{item.productImages}}?imageMogr2/thumbnail/!249x140r|imageMogr2/gravity/Center/crop/249x140" alt="" />
-						<div class="article_nav_cen_size">{{item.productTitle}}</div>
+						<div class="article_nav_cen_size" style="width: 3.29rem;-webkit-line-clamp: 1;">{{item.productTitle}}</div>
+						<div class="" style="font-size: .26rem;color: #F97215;float: left;width: 2rem;margin-top: 0.1rem;">￥{{item.productPrice}}</div>
+						<div class="buy_goods" data-productId={{item.productId}}>购买</div>
 					</div>
 					{{else}}
 					<div style="font-size: 0.26rem;width: 6.98rem;height: 0.57rem;line-height: 0.57rem;
