--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -162,7 +162,7 @@
 						<img src="{{item.doctor.avatar}}" alt="" />
 						<span>{{item.doctor.name}}医师 推荐</span>
 						{{else}}
-						<img src="/xcview/images/touxiang.png" alt="" />
+						<img src="/xcview/images/regards.png" alt="" />
 						<span>医师 推荐</span>
 						{{/if}}
 
