--- a/wechat/src/main/webapp/xcview/html/shop/payment_success.html
+++ b/wechat/src/main/webapp/xcview/html/shop/payment_success.html
@@ -52,7 +52,7 @@
 			<div class="win ongoing">
 				<img src="/xcview/images/shop/win.png" alt="" />等待支付完成
 			</div>
-			<div class="win finished">
+			<div class="win finished" style="width: 2.1rem;">
 				<img src="/xcview/images/shop/win.png" alt="" />支付成功
 			</div>
 			<div class="actual_payment finished">实付款<span class="amount"></span></div>
