修改物流状态显示

--- a/wechat/src/main/webapp/xcview/html/shop/shop-logistics.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-logistics.html
@@ -37,7 +37,7 @@
 				<div class="ware-img z">
 					<img class="orderImg" src="" alt="商品" />
 				</div>
-				<p class="transportStatus">运输中</p>
+				<p class="transportStatus"></p>
 				<p class="kuaidiName"></p>
 				<p class="orderSn"></p>
 			</div>
