确认订单删除加粗

--- a/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
+++ b/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
@@ -56,8 +56,8 @@
 				<div class="address_message">
 					<input class="receiverId" type="hidden" />
 					<div class="address_message_top">
-						<div class="addressee">收件人：<span class="consignee"></span></span></div>
-						<div class="cell-phone"><span class="phone"></span></div>
+						<div class="addressee"><strong>收件人：<span class="consignee"></span></span></strong></div>
+						<div class="cell-phone"><strong><span class="phone"></span></strong></div>
 					</div>
 					<div class="detailed_address"><span class="areaName"></span><span class="address"></span></div>
 				</div>
