--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -35,7 +35,8 @@
 <style>
 	/*处理刷新*/
 	.minirefresh-wrap{
-		width: 7.6rem;
+		/*width: 7.6rem;*/
+		width: 7.5rem;
 		top: 4.8rem !important;
 	}
 	.minirefresh-theme-default .minirefresh-downwrap{
