--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -84,7 +84,7 @@
             <div class="special_img">
                 <img src="{{coverImg}}?imageMogr2/thumbnail/!750x425r|imageMogr2/gravity/Center/crop/750x425" alt=""/> <!-- 此图是从上一页专题图的封面图 -->
             </div>
-             <div class="intro_top" onclick="history.back()">  
+             <div class="intro_top" onclick="common_share_backs('/xcview/html/apprentice/apprentice.html')">  
            <!--  <div class="intro_top" onclick="share_back();"> -->
                 <div class="intro_top_bg"></div>
                 <img src="/xcview/images/anchorj.png" alt=""/>
