首页添加购物车

--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -64,6 +64,34 @@
 		background: #F0F0F0;
     	overflow: hidden;
 	}
+	.footer{
+		z-index: 1;
+	}
+	.minirefresh-totop{
+		z-index: 2;
+	}
+	.shopping_carts{
+		width: .8rem;
+		height: .8rem;
+		position: fixed;
+		bottom: 2rem;
+		right: .26rem;
+		z-index: 9999;
+	}
+	.shopping_carts img{
+		width: .8rem;
+		height: .8rem;
+	}
+	.shopping_carts span{
+		position: absolute;
+	    top: .35rem;
+	    font-size: .22rem;
+	    color: #FFFFFF;
+	    background: #F97215;
+	    right: 0;
+	    border-radius: 100px;
+	    padding: .01rem .04rem;
+	}
 </style>
 </head>
 
@@ -211,6 +239,12 @@
 		</ul>
 	</div>
 	<!-- 底部结束 -->
+	
+	<!--购物车-->
+	<div class="shopping_carts">
+		<img src="/xcview/images/shop/shopping_carts.png" />
+		<span></span>
+	</div>
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
