首页列表-金额添加小数

--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -183,7 +183,7 @@
 					{{/if}}
 
 					<div class="title">{{item.name}}</div>
-					<div class="price">￥{{item.price}}</div>
+					<div class="price">￥<span>{{item.price}}</span></div>
 					<div class="referrer">
 						
 
