健康测评和照片上传bug

--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2152,7 +2152,7 @@
 									<span>&yen;</span>
 									<input class="sales-prise max-price" type="text" oninput="value=value.replace(/[^\d]/g,'')" />
 								</span>
-								<span style="color: #b3b3b3;font-size: 16px;">（元）</span>
+								<span style="color: #b3b3b3;font-size: 16px;"></span>
 							</p>
 							<p class="shopping-code">
 								<span class="left-tip"></span>
