--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -7,7 +7,10 @@
 		<link rel="stylesheet" href="/xcview/css/shop/shop-comment.css">
 		<!--提示-->
 		<link rel="stylesheet" href="/xcview/css/alert/sharecss.css">
+		<link rel="stylesheet" href="/xcview/css/mui.min.css">
+		<link rel="stylesheet" href="/xcview/css/mui.picker.min.css">
 		<link rel="stylesheet" href="/xcview/css/shop/healthy-home.css">
+		
 		<script>
 		// rem响应式处理
 			var kk=document.documentElement.clientWidth;
@@ -66,12 +69,17 @@
 				<!--出生日期-->
 				<div class="birth-wrap">
 					<span class="left-tip z">出生日期</span>
-					<div class="birth-date z">
-						<select name="">
-							<option value="0" style="color: #999;">请选择（必填）</option>
-							<option value="1">sdfsdfsd</option>
-						</select>
-					</div>
+					<!--<div class="birth-date z">
+						<input type="text" id="birth-btn" placeholder="请选择（必填）">
+					</div>-->
+					<form class="mui-input-group">
+						<div class="mui-input-row" id="liMONTH">
+							<label>选择月份</label>
+							<input type='text' class="font mui-left" placeholder="请选择" id="datMONTH" readonly="true">
+							<span class="mui-pull-right"><a class="mui-navigate-right" ></a></span>
+						</div>
+					</form>
+
 				</div>
 			</div>
 		</div>
@@ -86,15 +94,14 @@
 			
 		</div>
 		
-		
-		
 		<script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 		<script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
+		<script type="text/javascript" src="/xcview/js/common/mui.picker.min.js"></script>
 		<script type="text/javascript" src="/xcview/js/common/common.js?v=wechat_1.1.1"></script>
 		<script type="text/javascript" src="/xcview/js/common/template.js"></script> 
 		<!--提示-->
 		<script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script> 
 		<script type="text/javascript" src="/xcview/js/shop/healthy-home.js"></script>
-		
 	</body>
+
 </html>
