健康诊疗，页面一完成

--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -72,11 +72,9 @@
 					<!--<div class="birth-date z">
 						<input type="text" id="birth-btn" placeholder="请选择（必填）">
 					</div>-->
-					<form class="mui-input-group">
+					<form class="mui-input-group" id="birth-date">
 						<div class="mui-input-row" id="liMONTH">
-							<label>选择月份</label>
 							<input type='text' class="font mui-left" placeholder="请选择" id="datMONTH" readonly="true">
-							<span class="mui-pull-right"><a class="mui-navigate-right" ></a></span>
 						</div>
 					</form>
 
