修改bug7078;修改bug7088-评价后内容之间显示;

--- a/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
@@ -22,7 +22,7 @@
 		<div class="wp">
 			<div class="header-wrap">			
 				<div class="header">
-					<a href="javascript :;" onClick="javascript :history.back(-1);">
+					<a href="javascript:;" onclick="history.back();">
 						<img class="return-img" src="/xcview/images/screen_close.png" alt="返回" />
 					</a>
 					<h3>发布评价</h3>
