--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -69,19 +69,18 @@
 				<!--出生日期-->
 				<div class="birth-wrap">
 					<span class="left-tip z">出生日期</span>
-					<!--<div class="birth-date z">
-						<input type="text" id="birth-btn" placeholder="请选择（必填）">
-					</div>-->
 					<form class="mui-input-group" id="birth-date">
 						<div class="mui-input-row" id="liMONTH">
 							<input type='text' class="font mui-left" placeholder="请选择" id="datMONTH" readonly="true">
 						</div>
 					</form>
-
 				</div>
 			</div>
 		</div>
-			
+		<!--开始测评-->	
+		<div class="star-test">
+			<button type="button">开始测评</button>
+		</div>
 			
 
 			
