搜索列表，金额变更。。测试登录页面

--- a/wechat/src/main/webapp/xcview/html/shop/search_listings.html
+++ b/wechat/src/main/webapp/xcview/html/shop/search_listings.html
@@ -68,7 +68,8 @@
 	}
 	.product_list{
 		overflow: hidden;
-		background:#f0f0f0;
+		/*background:#f0f0f0;*/
+	    background: rgb(248, 248, 248);
 	}
 	/*.product_lists{
 		width: 100%;
