--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -155,7 +155,7 @@
 				<div class="referral">{{items.caption}}</div>
 			</div>
 			<div class="price">
-				<span class="ruling_price">￥{{items.price}}</span>
+				<span class="ruling_price">￥<span>{{items.price}}</span></span>
 				{{if items.marketprice > items.price}}
 					<span class="original_price">￥{{items.marketprice}}</span>
 				{{/if}}
@@ -386,9 +386,11 @@
 				<div class="message">
 					<script type="text/html" id="message">
 					<img src="{{items.picture}}" alt="" class="surface_plot" />
-					
 					<div class="information">
-						<div class="price">￥{{items.sales}}</div>
+						<span style="font-size: .28rem;color: #F97215;">
+							￥<span class="price"><span>{{items.sales}}</span></span>
+						</span>
+						
 						<div class="repertory">库存120件</div>
 						<!--<div class="category">
 							<span class="choice">选择</span>
