全部推荐--评价页面金额添加小数

--- a/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
+++ b/wechat/src/main/webapp/xcview/html/shop/all_evaluation.html
@@ -155,7 +155,9 @@
 					<img src="{{items.picture}}" alt="" class="surface_plot" />
 					
 					<div class="information">
-						<div class="price">￥{{items.sales}}</div>
+						<span style="font-size: .28rem;color: #F97215;">
+							￥<span class="price"><span>{{items.sales}}</span></span>
+						</span>
 						<div class="repertory">库存120件</div>
 						<!--<div class="category">
 							<span class="choice">选择</span>
