订单详情--点击客服按钮修改成on点击事件。订单中心-刷新效果修改

--- a/wechat/src/main/webapp/xcview/html/shop/line_item.html
+++ b/wechat/src/main/webapp/xcview/html/shop/line_item.html
@@ -163,7 +163,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="notescontact">
+			<div class="notescontact" id="notescontact">
 				<img src="/xcview/images/shop/notescontact.png" alt="" />联系客服
 			</div>
 			
@@ -248,14 +248,6 @@
 
 <script>
 
-	// 点击客服
-	$(".notescontact").click(function(){
-		jqtoast("熊猫客服休息中，稍后报道！");
-	});
-	// 点击头部区域客服消息  
-	$(".advices").click(function(){
-		jqtoast("熊猫客服休息中，稍后报道！");
-	});
 </script>
 
 </html>
