--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -241,7 +241,7 @@
 	<!-- 底部结束 -->
 	
 	<!--购物车-->
-	<div class="shopping_carts">
+	<div class="shopping_carts" onclick="location.href ='/xcview/html/shop/shopping_trolley.html'">
 		<img src="/xcview/images/shop/shopping_carts.png" />
 		<span></span>
 	</div>
