订单详情--添加金额小数

--- a/wechat/src/main/webapp/xcview/html/shop/line_item.html
+++ b/wechat/src/main/webapp/xcview/html/shop/line_item.html
@@ -145,21 +145,21 @@
 			<!-- <div class="zongjia"></div> -->
 			<div class="fund">
 				<div class="fund_main">
-					<div class="payment_details">
+					<div class="payment_details total_price">
 						<div class="total fund_title">商品总价</div>
-						<div class="yuan">￥{{price}}</div>
+						<div class="yuan">￥<span>{{price}}</span></div>
 					</div>
-					<div class="payment_details">
+					<div class="payment_details freight">
 						<div class="fund_title">运费</div>
-						<div class="yuan">+￥{{freight}}</div>
+						<div class="yuan">+￥<span>{{freight}}</span></div>
 					</div>
 					<!--<div class="payment_details">
 						<div class="fund_title">优惠金额</div>
 						<div class="yuan">-￥{{preferentialAmount}}</div>
 					</div>-->
-					<div class="payment_details">
+					<div class="payment_details PAYG">
 						<div class="fund_title">需付款（含运费）</div>
-						<div class="yuans">￥{{amount}}</div>
+						<div class="yuans">￥<span>{{amount}}</span></div>
 					</div>
 				</div>
 			</div>
