[fix]加入购物车库存校验

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -593,6 +593,8 @@
 					}
                     $('.shopping_quantity').html(totalQuantity);
                     jqtoast("已加入购物车");
+				} else {
+				    jqtoast(data.errorMessage);
 				}
 			});
 		}else{
