修改--首页轮播。报错问题

--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -52,7 +52,8 @@
 <header>
     <div class="header">
         <!--<div class="return" onclick="location.href ='/xcview/html/shop/commodity_details.html?productId=' + id +'">-->
-        <div class="return" onclick="javascript:history.go(-1);">
+        <!--<div class="return" onclick="javascript:history.go(-1);">-->
+        <div class="return" onclick="self.location=document.referrer;">
             <img src="/xcview/images/backicon.png" alt="" class="">
         </div>
         <div class="title">购物车</div>
