--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -361,6 +361,7 @@
 				客服
 			</div>
 			<div class="shopping_cart" onclick="location.href ='/xcview/html/shop/shopping_trolley.html '">
+			<!--<div class="shopping_cart" onclick="trolley()">-->
 				<img src="/xcview/images/shop/shopping_cart.png" alt="" />
 				购物车
 				<span class="shopping_quantity"></span>
