--- a/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
+++ b/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
@@ -28,6 +28,16 @@
 	    }
 	}	
 </script>
+
+<style type="text/css">
+	.indent_list .title span{
+		overflow: hidden;
+	    white-space: nowrap;
+	    text-overflow: ellipsis;
+	    width: 6.5rem;
+	    display: inherit;
+	}
+</style>
 </head>
 
 <body style="background: #f0f0f0;">
