详情--添加评价规格区域

--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -90,7 +90,7 @@
 	    background: #F97215;
 	    right: 0;
 	    border-radius: 100px;
-	    padding: .01rem .04rem;
+	    padding: 0 .1rem;
 	}
 	
 	.main_center{
