--- a/online-web/src/main/webapp/web/html/anchors_resources.html
+++ b/online-web/src/main/webapp/web/html/anchors_resources.html
@@ -2289,7 +2289,7 @@
 									<li data-status="PENDING_SHIPMENT">待发货</li>
 									<li data-status="SHIPPED">已发货</li>
 									<li data-status="COMPLETED">已完成</li>
-									<li data-status="CANCELED">已关闭</li>
+									<li data-status="DENIED">已关闭</li>
 									<!--<li>退款中</li>-->
 								</ul>
 							</div>
