--- a/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shopping_trolley.html
@@ -60,6 +60,14 @@
        	.shop-name .head_portrait{
        		border-radius: 100px;
        	}
+       	.inventory .select{
+       		margin-top: 0.09rem;
+		    display: block !important;
+		    float: left;
+       	}
+       	.inventory{
+       		overflow: hidden;
+       	}
     </style>
 </head>
 
@@ -194,7 +202,7 @@
                         <div class="shop-info-text">
                             <h4 class="">{{cartItem.sku.name}}</h4>
                             <div class="inventory"  data-pid="{{cartItem.sku.productId}}" data-sid="{{cartItem.sku.id}}">
-                            	<div class="">
+                            	<div class="" style="float: left;">
                             		<span class="packaging">{{cartItem.sku.specifications}}</span>（库存<span class="number_packages">{{cartItem.sku.availableStock}}</span>件）
                             	</div>
                             	<img src="/xcview/images/bot.png" alt="" class="select" style="display: inline"
