--- a/wechat/src/main/webapp/xcview/html/edit_address.html
+++ b/wechat/src/main/webapp/xcview/html/edit_address.html
@@ -226,7 +226,7 @@
 			<div class="prosperity_cen_top">修改成功</div>
 			
 			<div class="prosperity_cen_size">
-				<div class="prosperity_cen_yes" onclick="location.href ='address.html';" style="color: #00bc12 !important;border: 0;">确定</div>
+				<!--<div class="prosperity_cen_yes" onclick="location.href ='address.html';" style="color: #00bc12 !important;border: 0;">确定</div>-->
 				<div class="both"></div>
 			</div>
 		</div>
@@ -256,12 +256,12 @@
             <div class="edit_one_put"><input type="tel" id="phone" placeholder="请输入手机号码" style="text-align: right;font-size:0.28rem;" maxlength="11" /></div>
           </div>
         </div>
-        <div class="edit_one01">
+        <!--<div class="edit_one01">
           <div class="edit_one">
             <div class="edit_one_size">邮编</div>
             <div class="edit_one_put"><input type="text" id="zip-code" placeholder="请输入邮编" style="text-align: right;font-size:0.28rem;" maxlength="11" /></div>
           </div>
-        </div>
+        </div>-->
         <!--<div class="edit_one01">
           <div class="edit_one">
             <div class="edit_one_size">所在地区</div>
