确认订单页--ui。详情ui。推荐医师ui。全部评价--刷新优化

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -82,6 +82,10 @@
 		color: #000 !important;
 		opacity: 1 !important;
 	}
+	.my-gallery{
+		background: url(/xcview/images/defaults.png) no-repeat;
+		background-size: 100% 100%;
+	}
 </style>
 </head>
 <body>
