--- a/wechat/src/main/webapp/xcview/html/shop/recommend.html
+++ b/wechat/src/main/webapp/xcview/html/shop/recommend.html
@@ -43,9 +43,9 @@
 	/*处理刷新*/
 	.minirefresh-wrap{
 		top: 1.1rem;
-		padding-bottom: 1.6rem
-		;
+		padding-bottom: 1.6rem;
 		z-index: -1;
+		margin-top: -.2rem;
 	}
 	.minirefresh-theme-default .minirefresh-downwrap{
 		height: 1rem;
@@ -71,6 +71,13 @@
 	/*规格hide*/
 	.hide {
 	    display: none!important;
+	}
+	
+	.upwrap-tips{
+		display: none !important;
+	}
+	.footer .service{
+		margin-left: .2rem;
 	}
 </style>
 </head>
