修改购物车返回上一级。首页列表修改，金额添加小数-删除刷新造成影响。详情，删除订单按钮位置修改

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -720,7 +720,7 @@
 					<div class="article_nav_cen comment_hide">
 						<img src="{{item.productImages}}?imageMogr2/thumbnail/!249x140r|imageMogr2/gravity/Center/crop/249x140" alt="" />
 						<div class="article_nav_cen_size" style="width: 3.29rem;-webkit-line-clamp: 1;">{{item.productTitle}}</div>
-						<div class="" style="font-size: .26rem;color: #F97215;float: left;width: 2rem;margin-top: 0.1rem;">￥{{item.productPrice}}</div>
+						<div class="" style="font-size: .26rem;color: #F97215;float: left;width: 2rem;margin-top: 0.1rem;">￥<span>{{item.productPrice}}</span></div>
 						<div class="buy_goods" data-productId={{item.productId}}>购买</div>
 					</div>
 					{{else}}
