--- a/wechat/src/main/webapp/xcview/html/shop/line_item.html
+++ b/wechat/src/main/webapp/xcview/html/shop/line_item.html
@@ -197,8 +197,9 @@
 					
 					<!-- 交易关闭 -->
 					{{else if status == 'CANCELED' || status == 'FAILED' || status == 'DENIED'}}
-					<div class="delete_order" data-id="{{id}}">删除订单</div>
+					
 					<div class="fack_shipped_cancel_order" onclick='againBuy("{{sn}}")'>再次购买</div>
+					<div class="delete_order" data-id="{{id}}" style="border: 1px solid #DEDEDE;color: #333333;">删除订单</div>
 					{{/if}}
 				</div>
 			</div>
