--- a/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
+++ b/wechat/src/main/webapp/xcview/html/shop/healthy-home.html
@@ -83,7 +83,7 @@
 		</div>
 		<!--开始测评-->	
 		<div class="star-test">
-			<button type="button" class="start disabled">开始测评</button>
+			<button type="button" class="start">开始测评</button>
 		</div>
 			
 
