--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -181,7 +181,7 @@
 					<!--<img src="{{item.productImages}}" alt="" class="surface_plot" />-->
 
 					{{if item.productImages != null}}
-					<img src="{{item.productImages[0].source}}" alt="" class="surface_plot" />
+					<img src="{{item.productImages[0].source}}?imageMogr2/thumbnail/!368x368r|imageMogr2/gravity/Center/crop/368x368" alt="" class="surface_plot" />
 					{{else}}
 					<img src="/xcview/images/defaults.png" alt="" class="surface_plot" />
 					{{/if}}
