点击中医师跳转详情--商品封面图修改

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -463,14 +463,14 @@
 	    color: #F97215;
 	    /* width: 1rem; */
 	    border: 1px solid #f97215;
-	    width: 1rem;
+	    width: 1.05rem;
 	    float: right;
 	    text-align: center;
-	    height: .5rem;
-	    line-height: .5rem;
+	    height: .52rem;
+	    line-height: .52rem;
 	    border-radius: 100px;
 	    margin-right: .2rem;
-	    margin-top: -.28rem;
+	    margin-top: -.03rem;
 	}
 </style>
 
@@ -717,11 +717,11 @@
 					</div>
 
 					{{if item.productIsMarketable}}
-					<div class="article_nav_cen comment_hide">
-						<img src="{{item.productImages}}?imageMogr2/thumbnail/!249x140r|imageMogr2/gravity/Center/crop/249x140" alt="" />
-						<div class="article_nav_cen_size" style="width: 3.29rem;-webkit-line-clamp: 1;">{{item.productTitle}}</div>
+					<div class="article_nav_cen comment_hide buy_good" data-productId={{item.productId}}>
+						<img src="{{item.productImages}}?imageMogr2/thumbnail/!140x140r|imageMogr2/gravity/Center/crop/140x140" alt="" style="width: 1.4rem;" />
+						<div class="article_nav_cen_size" style="width: 4rem;-webkit-line-clamp: 1;">{{item.productTitle}}</div>
 						<div class="" style="font-size: .26rem;color: #F97215;float: left;width: 2rem;margin-top: 0.1rem;">￥<span>{{item.productPrice}}</span></div>
-						<div class="buy_goods" data-productId={{item.productId}}>购买</div>
+						<div class="buy_goods">购买</div>
 					</div>
 					{{else}}
 					<div style="font-size: 0.26rem;width: 6.98rem;height: 0.57rem;line-height: 0.57rem;
