市场价还原

--- a/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
+++ b/wechat/src/main/webapp/xcview/html/shop/commodity_details.html
@@ -180,10 +180,10 @@
 			</div>
 			<div class="price">
 				<span class="ruling_price">￥<span>{{items.price}}</span></span>
-				<span class="original_price">￥{{items.marketprice}}</span>
-				<!--{{if items.marketprice > items.price}}
-					<span class="original_price">￥{{items.marketprice}}</span>
-				{{/if}}-->
+				<!--<span class="original_price">￥{{items.marketprice}}</span>-->
+				{{if items.marketprice > items.price}}
+					<span class="original_price">￥<span>{{items.marketprice}}</span></span>
+				{{/if}}
 				<span class="sold_out">已售{{items.sales}}件</span>
 				<div class="both"></div>
 			</div>
