返回--地址管理修改返回。测试确认订单返回。支付成功-返回  订单列表

--- a/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
+++ b/wechat/src/main/webapp/xcview/html/shop/confirm_order.html
@@ -45,6 +45,8 @@
 	<header>
 		<div class="header">
 			<div class="return" onclick="goHistory()">
+			<!--<div class="return" onclick="common_share_back()">-->
+			<!--<div class="return" onclick="returns()">-->
 				<img src="/xcview/images/backicon.png" alt="" class="">
 			</div>
 			<div class="title">确认订单</div>
