--- a/wechat/src/main/webapp/xcview/html/shop/payment_success.html
+++ b/wechat/src/main/webapp/xcview/html/shop/payment_success.html
@@ -36,7 +36,8 @@
 	<!-- 头部区域开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="location.href ='/xcview/html/shop/shop.html'">
+			<!--<div class="return" onclick="location.href ='/xcview/html/shop/shop.html'">-->
+			<div class="return" onclick="gotoLineItem()">
 				<img src="/xcview/images/backicon.png" alt="" class="">
 			</div>
 			<div class="title ongoing">等待支付完成</div>
