--- a/wechat/src/main/webapp/xcview/html/edit_address.html
+++ b/wechat/src/main/webapp/xcview/html/edit_address.html
@@ -138,21 +138,22 @@
 	    left: 0;
 	}
 	.prosperity_cen{
-		width: 5rem;
-	    height: 1.6rem;
-	    position: absolute;
-	    top: 50%;
-	    left: 50%;
-	    margin-top: 4.8rem;
-	    margin-left: -2.5rem;
-	    background: #f4f4f4;
-	    z-index: 999999999;
-	    border-radius: 6px;
+		    width: 3rem;
+		    height: 0.8rem;
+		    position: absolute;
+		    top: 50%;
+		    left: 50%;
+		    margin-top: 4.5rem;
+		    margin-left: -1.5rem;
+		    background: #888888;
+		    z-index: 999999999;
+		    border-radius: 6px;
+		    color: white;
 	}
 	.prosperity_cen_top{
 		text-align: center;
 	    font-size: 0.3rem;
-	    margin-top: 0.6rem;
+	    margin-top: 0.2rem;
 	}
 	.prosperity_cen_size{
 		margin: 0 auto;
@@ -221,7 +222,7 @@
 
 <body class="person_body">
 	<div class="person_prosperity">
-		<div class="prosperity_bg"></div>
+		<!--<div class="prosperity_bg"></div>-->
 		<div class="prosperity_cen">
 			<div class="prosperity_cen_top">修改成功</div>
 		</div>
