--- a/wechat/src/main/webapp/xcview/html/shop/line_item.html
+++ b/wechat/src/main/webapp/xcview/html/shop/line_item.html
@@ -128,9 +128,12 @@
 					<div class="product_details_center">
 						<div class="title"><span>{{orderItem.name}}</span></div>
 						<div class="pack">
-							{{if orderItem.sku != null}}
-							{{orderItem.sku.specifications}}（库存{{orderItem.sku.stock}}件）
+							{{if orderItem.sku != null && orderItem.sku.specifications !=null}}
+								{{orderItem.sku.specifications}}
 							{{/if}}
+						    {{if orderItem.sku != null && orderItem.sku.availableStock !=null}}
+								（库存{{orderItem.sku.availableStock}}件）
+							{{/if}}	
 						</div>
 						<div class="total_prices">
 							<div class="price_yuan" >
